# kumpy

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
examples/: basic_usage.py
kumpy/: __init__.py  array.py
src/: kumpy_core.cpp
tests/: test_build.py
