[build-system]
requires = ["setuptools", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kumpy"
version = "0.1.0"
description = "A simple NumPy-like library for learning C++ extensions"
authors = [{name = "Kaveen Jayamanna", email = "kaveen.jayamanna@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
]

[project.urls]
Homepage = "https://github.com/ktjayamanna/kumpy"

[tool.setuptools]
packages = ["kumpy"]
